# mesh-chat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
mesh-core/: Cargo.toml
mesh-core/src/: lib.rs
mesh-lib/: Cargo.toml
mesh-lib/src/: aliases.rs  config.rs  history.rs  lib.rs  logging.rs  serial.rs
meshcore-backend/: Cargo.toml
meshcore-backend/src/: lib.rs
meshtastic-backend/: Cargo.toml
meshtastic-backend/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/public/: README.md
ui/src/: App.vue  Icon.vue  main.js  style.css
