[package]
name = "mesh-chat-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri desktop wrapper around the mesh-chat backend"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mesh-core = { workspace = true }
mesh-lib = { workspace = true }
meshcore-backend = { workspace = true }
meshtastic-backend = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
chrono = { workspace = true }
rand = "0.10"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
